cabal-version: >=1.24
name: leksah
version: 0.17.0.0
license: GPL-2
license-file: LICENSE
copyright: 2007-2016 Juergen Nicklisch-Franken, Hamish Mackenzie, Jacco Krijnen, JP Moresmau
maintainer: maintainer@leksah.org
author: Juergen Nicklisch-Franken, Hamish Mackenzie, Jacco Krijnen, JP Moresmau
stability: provisional
tested-with: ghc ==8.2.1 ghc ==8.0.2
homepage: http://www.leksah.org
package-url: http://code.haskell.org/leksah
bug-reports: https://github.com/leksah/leksah/issues
synopsis: Haskell IDE written in Haskell
description:
    An Integrated Development Environment for Haskell written in Haskell.
category: Development, IDE, Editor
x-gettext-po-files: po/*.po
x-gettext-domain-name: leksah
build-type: Simple
data-files:
    LICENSE
    Readme.md
    data/current.lkshs
    data/candy.lkshc
    data/candy-hasklig.lkshc
    data/keymap.lkshk
    data/leksah.menu
    data/svn.menu
    data/git.menu
    data/prefs.lkshp
    data/prefscoll.lkshp
    data/emacs.lkshk
    data/LICENSE
    data/main.lksht
    data/testmain.lksht
    data/module.lksht
    data/welcome.txt
    data/leksah-welcome/cabal.project
    data/leksah-welcome/Setup.lhs
    data/leksah-welcome/leksah-welcome.cabal
    data/leksah-welcome/LICENSE
    data/leksah-welcome/src/Main.hs
    data/leksah-welcome/test/Main.hs
    data/empty.lkshs
    data/empty-file
    data/.gtkrc-2.0
    data/styles/leksah.xml
    data/styles/leksah-dark.xml
    language-specs/cabal.lang
    language-specs/haskell.lang
    language-specs/haskell-literate.lang
    language-specs/hamlet.lang
    language-specs/cassius.lang
    language-specs/lucius.lang
    language-specs/julius.lang
    language-specs/jmacro.lang
    language-specs/nix.lang
    pics/ide_folder.png
    pics/ide_source_folder.png
    pics/ide_component.png
    pics/ide_source_dependency.png
    pics/ide_package.png
    pics/ide_cabal_file.png
    pics/ide_class.png
    pics/ide_configure.png
    pics/ide_data.png
    pics/ide_error_next.png
    pics/ide_error_prev.png
    pics/ide_function.png
    pics/ide_git.png
    pics/ide_instance.png
    pics/ide_konstructor.png
    pics/ide_make.png
    pics/ide_method.png
    pics/ide_newtype.png
    pics/ide_other.png
    pics/ide_reexported.png
    pics/ide_rule.png
    pics/ide_run.png
    pics/ide_slot.png
    pics/ide_source.png
    pics/ide_source_local.png
    pics/ide_type.png
    pics/leksah.png
    pics/ide_step.png
    pics/ide_local.png
    pics/ide_module.png
    pics/ide_continue.png
    pics/ide_debug.png
    pics/ide_clean.png
    pics/ide_build.png
    pics/ide_link.png
    pics/ide_rebuild_meta.png
    pics/ide_empty.png
    pics/ide_js.png
    pics/ide_error.png
    pics/ide_warning.png
    pics/ide_suggestion.png
    pics/ide_doc_build.png
    pics/ide_bench_build.png
    pics/ide_test_build.png
    pics/ide_target_binary.png
    pics/ide_target_js.png
    pics/ide_nix.png
    scripts/clean.sh
    scripts/stage.sh
    osx/bundle.sh
    osx/gtk2.sh
    osx/gtk.sh
    osx/Info.plist
    osx/launcher.sh
    osx/leksah.bundle
    osx/leksah.icns
    osx/makedmg.sh
    osx/makedmgs.sh
    osx/osxkeymap.lkshk
    osx/settings.ini
    win32/gtk2hsall.sh
    win32/gtkrc
    win32/leksah.bat
    win32/leksah.ico
    win32/leksah.nsi
    win32/leksah-rebuild-metadata.bat
    win32/leksah-server.bat
    win32/makeinstaller.sh
    win32/makeinstallers.sh
    win32/recache.sh
    linux/applications/leksah.desktop
    linux/applications/leksah.xml
    linux/icons/hicolor/48x48/apps/leksah_48x48.png
    linux/specfiles/fedora/12/ghc-binary-shared.spec
    linux/specfiles/fedora/12/ghc-deepseq.spec
    linux/specfiles/fedora/12/ghc-hslogger.spec
    linux/specfiles/fedora/12/ghc-ltk.spec
    linux/specfiles/fedora/12/ghc-process-leksah.spec
    linux/specfiles/fedora/12/ghc-regex-base.spec
    linux/specfiles/fedora/12/ghc-regex-tdfa.spec
    linux/specfiles/fedora/12/leksah_server.spec
    linux/specfiles/fedora/12/leksah.spec
    linux/specfiles/fedora/13/ghc-binary-shared.spec
    linux/specfiles/fedora/13/ghc-hslogger.spec
    linux/specfiles/fedora/13/ghc-ltk.spec
    linux/specfiles/fedora/13/ghc-process-leksah.spec
    linux/specfiles/fedora/13/ghc-regex-tdfa.spec
    linux/specfiles/fedora/13/haddock.spec
    linux/specfiles/fedora/13/leksah-server.spec
    linux/specfiles/fedora/13/leksah.spec
    linux/specfiles/fedora/14/ghc-binary-shared.spec
    linux/specfiles/fedora/14/ghc-haddock.spec
    linux/specfiles/fedora/14/ghc-ltk.spec
    linux/specfiles/fedora/14/ghc-process-leksah.spec
    linux/specfiles/fedora/14/ghc-regex-tdfa.spec
    linux/specfiles/fedora/14/leksah-server.spec
    linux/specfiles/fedora/14/leksah.spec
    linux/specfiles/fedora/14/leksah.spec-darcs-backup0
    linux/specfiles/fedora/14/leksah.spec-darcs-backup1
extra-source-files:
    Setup.lhs
    SetupLocale.lhs
    po/*.pot
    po/*.po

source-repository head
    type: git
    location: https://github.com/leksah/leksah

flag yi
    description:
        Experimental Yi support
    default: False
    manual: True

flag codemirror
    description:
        Experimental codemirror editor
    default: False

flag dyre
    description:
        Experimental Yi support

flag threaded
    description:
        Build with support for multithreaded execution

flag loc
    description:
        Experimental localization support
    default: False

flag network-uri
    description:
        Get Network.URI from the network-uri package

flag gtk-320
    description:
        GTK+ is 3.20 or later

flag check-gtk-version
    description:
        This flag can be used to disable the pkgconfig-depends
        as they can cause problems on macOS when using nix.
    manual: True

flag hare
    description:
        Enable HaRe based features.
    default: False

library
    exposed-modules:
        IDE.Brittany
        IDE.BufferMode
        IDE.Build
        IDE.Command
        IDE.Command.Print
        IDE.Command.VCS
        IDE.Command.VCS.Common
        IDE.Command.VCS.Common.GUI
        IDE.Command.VCS.Common.Helper
        IDE.Command.VCS.Common.Workspaces
        IDE.Command.VCS.GIT
        IDE.Command.VCS.Mercurial
        IDE.Command.VCS.SVN
        IDE.Command.VCS.Types
        IDE.Completion
        IDE.Core.State
        IDE.Core.Types
        IDE.Debug
        IDE.Find
        IDE.GUIHistory
        IDE.Gtk.Package
        IDE.Gtk.Preferences
        IDE.Gtk.SourceCandy
        IDE.Gtk.State
        IDE.Gtk.Types
        IDE.Gtk.Workspaces
        IDE.HLint
        IDE.HaRe
        IDE.ImportTool
        IDE.Keymap
        IDE.LPaste
        IDE.Leksah
        IDE.LogRef
        IDE.Metainfo.Provider
        IDE.NotebookFlipper
        IDE.OSX
        IDE.Package
        IDE.PackageFlags
        IDE.Pane.Breakpoints
        IDE.Pane.Errors
        IDE.Pane.Files
        IDE.Pane.Grep
        IDE.Pane.HLint
        IDE.Pane.Info
        IDE.Pane.Log
        IDE.Pane.Modules
        IDE.Pane.PackageEditor
        IDE.Pane.PackageFlags
        IDE.Pane.Search
        IDE.Pane.SourceBuffer
        IDE.Pane.Trace
        IDE.Pane.Variables
        IDE.Pane.WebKit.Documentation
        IDE.Pane.WebKit.Inspect
        IDE.Pane.WebKit.Output
        IDE.Pane.Workspace
        IDE.PaneGroups
        IDE.Preferences
        IDE.Session
        IDE.SourceCandy
        IDE.Statusbar
        IDE.SymbolNavigation
        IDE.TextEditor
        IDE.TextEditor.Class
        IDE.TextEditor.CodeMirror
        IDE.TextEditor.GtkSourceView
        IDE.TextEditor.Yi
        IDE.TextEditor.Yi.Config
        IDE.TypeTip
        IDE.Utils.CabalUtils
        IDE.Utils.DebugUtils
        IDE.Utils.DirectoryUtils
        IDE.Utils.ExternalTool
        IDE.Utils.GUIUtils
        IDE.Utils.ServerConnection
        IDE.Web.Command
        IDE.Web.Events
        IDE.Web.Layout
        IDE.Web.Main
        IDE.Web.Widget.ContextMenu
        IDE.Web.Widget.Editor
        IDE.Web.Widget.Errors
        IDE.Web.Widget.Findbar
        IDE.Web.Widget.FileTree
        IDE.Web.Widget.Flipper
        IDE.Web.Widget.Grep
        IDE.Web.Widget.Keymap
        IDE.Web.Widget.Log
        IDE.Web.Widget.Menu
        IDE.Web.Widget.Menubar
        IDE.Web.Widget.Statusbar
        IDE.Web.Widget.Tabs
        IDE.Web.Widget.Tree
        IDE.Web.Widget.Toolbar
        IDE.Web.Widget.Workspace
        IDE.Workspaces
        IDE.Workspaces.Writer
    hs-source-dirs: src src-gtk
    other-modules:
        Paths_leksah
    default-language: Haskell2010
    default-extensions: ViewPatterns
    ghc-options: -fwarn-missing-fields -fwarn-incomplete-patterns
                 -ferror-spans -Wall
    build-depends:
        Cabal >=2 && <2.5,
        Glob >=0.9.2 && <0.11,
        HTTP >=4000.3.3,
        QuickCheck >=2.4.2 && <2.14,
        aeson >=1.1.2.0 && <1.5,
        aeson-pretty >=0.8.7 && <0.9,
        array >=0.2.0.0 && <0.6,
        attoparsec >=0.10.0.3 && <0.14,
        base >=4.0.0.0 && <4.13,
        base-compat >=0.9.0 && <0.11,
        binary >=0.5.0.0 && <0.9,
        binary-shared >=0.8.2 && <0.9,
        blaze-html -any,
        brittany >=0.11.0.0 && <0.13,
        bytestring >=0.9.0.1 && <0.11,
        clay >=0.13.1 && <0.14,
        conduit >=1.0.8 && <1.4,
        containers >=0.2.0.0 && <0.7,
        cpphs >=1.19 && <1.21,
        criterion-measurement >=0.1.1.0 && <0.2,
        data-default >=0.7.1.1 && <0.8,
        deepseq >=1.1.0.0 && <1.5,
        dependent-map >=0.2.4 && <0.3,
        dependent-sum >=0.4 && <0.6,
        dependent-sum-template >=0.0.0.6 && <0.1,
        directory >=1.0.0.2 && <1.4,
        executable-path >=0.0.3 && <0.1,
        extra >=1.6.12 && <1.7,
        filepath >=1.1.0.1 && <1.5,
        fsnotify >=0.3.0.1 && <0.4,
        generic-deriving >=1.10 && <1.13,
        ghcjs-codemirror -any,
        ghcjs-dom >=0.9.4.0 && <0.10,
        gi-cairo >=1.0.6 && <1.1,
        gi-gdk >=3.0.6 && <3.1,
        gi-gdkpixbuf >=2.0.6 && <2.1,
        gi-gio >=2.0.6 && <2.1,
        gi-glib >=2.0.6 && <2.1,
        gi-gobject >=2.0.6 && <2.1,
        gi-gtk >=3.0.25 && <3.1,
        gi-gtk-hs >=0.3.6.2 && <0.4,
        gi-gtksource >=3.0.6 && <3.1,
        gi-pango >=1.0.6 && <1.1,
        git >=0.2.0 && <0.4,
        haskell-gi-base >=0.21.2 && <0.23,
        haskell-gi-overloading ==0.0.*,
        hlint >=1.9.21 && <2.3,
        hslogger >=1.0.7 && <1.4,
        http-types >=0.12.2 && <0.13,
        jsaddle >=0.9.4.0 && <0.10,
        jsaddle-warp >=0.9.4.0 && <0.10,
        lens >=4.15.4 && <4.18,
        ltk >=0.16.2.0 && <0.17,
        mtl >=1.1.0.2 && <2.3,
        old-time >=1.0.0.1 && <1.2,
        parsec >=2.1.0.1 && <3.2,
        pretty >=1.0.1.0 && <1.2,
        pretty-show >=1.6.3 && <1.10,
        process >=1.4.3.0 && <1.7,
        reflex >=0.5 && <0.7,
        reflex-dom-core >=0.4 && <0.7,
        reflex-dom-svg >=0.3.1.1 && <0.4,
        regex-base ==0.93.*,
        regex-tdfa >=1.1 && <1.3,
        regex-tdfa-text -any,
        shakespeare >=2.0.0.1 && <2.1,
        split >=0.2.3.1,
        stm >=2.4.4 && <2.6,
        strict >=0.3.2 && <0.4,
        text >=0.11.1.5 && <1.3,
        text-replace >=0.0.0.1 && <0.1,
        time >=0.1 && <1.10,
        transformers >=0.2.2.0 && <0.6,
        unliftio-core >=0.1 && < 0.2,
        utf8-string >=0.3.1.1 && <1.1,
        vado >=0.0.1 && <0.1,
        vcsgui >=0.3.0 && <0.4,
        vcswrapper >=0.2.0 && <0.3,
        wai >=3.2.1.2 && <3.3,
        wai-app-static >=3.1.6.2 && <3.2,
        wai-extra >=3.0.24.3 && <3.1,
        warp >=3.2.25 && <3.4,
        websockets >=0.12.5.2 && <0.13

    build-tool-depends: alex:alex -any, happy:happy >=1.17.1

    if os(windows)
        extra-libraries:
            kernel32
        build-depends:
            Win32 >=2.2.0.0 && <2.7
    else
        build-depends:
            unix >=2.3.1.0 && <2.8

    if os(osx)
        ghc-options: -dynamic
        build-depends:
            gi-gtkosxapplication >=2.0.2 && <2.1,
            jsaddle-wkwebview >=0.9.4.0 && <0.10

    if os(linux)
        build-depends:
            gi-webkit2 >=4.0.6 && <4.1

    if flag(yi)
        cpp-options: -DLEKSAH_WITH_YI
        build-depends:
            yi >=0.12.4 && <0.13,
            yi-language >=0.2.0 && <0.3,
            yi-rope >=0.7.0.1 && <0.8

    if (flag(yi) && flag(dyre))
        cpp-options: -DLEKSAH_WITH_YI_DYRE
        build-depends:
            dyre >=0.8.3 && <0.9

    if flag(codemirror)
        cpp-options: -DLEKSAH_WITH_CODE_MIRROR

    if (flag(loc) && os(linux))
        cpp-options: -DLOCALIZATION
        build-depends:
            hgettext -any,
            setlocale -any

    if flag(network-uri)
        build-depends:
            network-uri >=2.6 && <2.7,
            network >=2.6 && <3.2
    else
        build-depends:
            network >=2.2 && <2.6

    if flag(check-gtk-version)

        if flag(gtk-320)
            cpp-options: -DMIN_VERSION_GTK_3_20
            pkgconfig-depends: gtk+-3.0 >=3.20
    else
        cpp-options: -DMIN_VERSION_GTK_3_20

    if !impl(ghcjs -any)
        build-depends:
            ghc >=6.10.1 && <8.7,
            haskell-src-exts >=1.13.5 && <1.22,
            leksah-server >=0.17.0.0 && <0.18

    if flag(hare)
        build-depends:
            HaRe >=0.8.4.1 && <0.9,
            ghc-mod-core >=5.9.0.0 && <5.10,
            monad-control >=1.0.2.3 && <1.1

library leksah-nogtk
    exposed-modules:
        IDE.Build
        IDE.Core.State
        IDE.Core.Types
        IDE.Debug
        IDE.Gtk.Package
        IDE.Gtk.State
        IDE.Gtk.Types
        IDE.Gtk.Workspaces
        IDE.LogRef
        IDE.Metainfo.Provider
        IDE.Package
        IDE.PackageFlags
        IDE.Pane.Log
        IDE.Pane.SourceBuffer
        IDE.Pane.WebKit.Documentation
        IDE.Pane.WebKit.Output
        IDE.Preferences
        IDE.SourceCandy
        IDE.TextEditor.Yi.Config
        IDE.Utils.CabalUtils
        IDE.Utils.DebugUtils
        IDE.Utils.DirectoryUtils
        IDE.Utils.ExternalTool
        IDE.Utils.ServerConnection
        IDE.Web.Command
        IDE.Web.Events
        IDE.Web.Layout
        IDE.Web.Main
        IDE.Web.Widget.ContextMenu
        IDE.Web.Widget.Editor
        IDE.Web.Widget.Errors
        IDE.Web.Widget.FileTree
        IDE.Web.Widget.Findbar
        IDE.Web.Widget.Flipper
        IDE.Web.Widget.Grep
        IDE.Web.Widget.Keymap
        IDE.Web.Widget.Log
        IDE.Web.Widget.Menu
        IDE.Web.Widget.Menubar
        IDE.Web.Widget.Statusbar
        IDE.Web.Widget.Tabs
        IDE.Web.Widget.Tree
        IDE.Web.Widget.Toolbar
        IDE.Web.Widget.Workspace
        IDE.Workspaces
        IDE.Workspaces.Writer
    hs-source-dirs: src src-nogtk vendor/ltk/src
    other-modules:
        Control.Event
        Paths_leksah
    default-language: Haskell2010
    default-extensions: ViewPatterns
    ghc-options: -fwarn-missing-fields -fwarn-incomplete-patterns
                 -ferror-spans -Wall
    build-depends:
        Cabal >=2 && <2.5,
        Glob >=0.9.2 && <0.11,
        HTTP >=4000.3.3,
        QuickCheck >=2.4.2 && <2.14,
        aeson >=1.1.2.0 && <1.5,
        aeson-pretty >=0.8.7 && <0.9,
        array >=0.2.0.0 && <0.6,
        attoparsec >=0.10.0.3 && <0.14,
        base >=4.0.0.0 && <4.13,
        base-compat >=0.9.0 && <0.11,
        binary >=0.5.0.0 && <0.9,
        binary-shared >=0.8.2 && <0.9,
        blaze-html -any,
        brittany >=0.11.0.0 && <0.13,
        bytestring >=0.9.0.1 && <0.11,
        clay >=0.13.1 && <0.14,
        conduit >=1.0.8 && <1.4,
        containers >=0.2.0.0 && <0.7,
        cpphs >=1.19 && <1.21,
        criterion-measurement >=0.1.1.0 && <0.2,
        data-default >=0.7.1.1 && <0.8,
        deepseq >=1.1.0.0 && <1.5,
        dependent-map >=0.2.4 && <0.3,
        dependent-sum >=0.4 && <0.6,
        dependent-sum-template >=0.0.0.6 && <0.1,
        directory >=1.0.0.2 && <1.4,
        executable-path >=0.0.3 && <0.1,
        extra >=1.6.12 && <1.7,
        filepath >=1.1.0.1 && <1.5,
        fsnotify >=0.3.0.1 && <0.4,
        generic-deriving >=1.10 && <1.13,
        ghcjs-codemirror -any,
        ghcjs-dom >=0.9.4.0 && <0.10,
        git >=0.2.0 && <0.4,
        hlint >=1.9.21 && <2.3,
        hslogger >=1.0.7 && <1.4,
        http-types >=0.12.2 && <0.13,
        jsaddle >=0.9.4.0 && <0.10,
        jsaddle-warp >=0.9.4.0 && <0.10,
        keycode >=0.2.2 && <0.3,
        lens >=4.15.4 && <4.18,
        mtl >=1.1.0.2 && <2.3,
        old-time >=1.0.0.1 && <1.2,
        parsec >=2.1.0.1 && <3.2,
        pretty >=1.0.1.0 && <1.2,
        pretty-show >=1.6.3 && <1.10,
        process >=1.4.3.0 && <1.7,
        reflex >=0.5 && <0.7,
        reflex-dom-core >=0.4 && <0.7,
        reflex-dom-svg >=0.3.1.1 && <0.4,
        regex-base ==0.93.*,
        regex-tdfa >=1.1 && <1.3,
        regex-tdfa-text -any,
        shakespeare >=2.0.0.1 && <2.1,
        split >=0.2.3.1,
        stm >=2.4.4 && <2.6,
        strict >=0.3.2 && <0.4,
        text >=0.11.1.5 && <1.3,
        text-replace >=0.0.0.1 && <0.1,
        time >=0.1 && <1.10,
        transformers >=0.2.2.0 && <0.6,
        unliftio-core >=0.1 && < 0.2,
        utf8-string >=0.3.1.1 && <1.1,
        vado >=0.0.1 && <0.1,
        vcswrapper >=0.2.0 && <0.3,
        wai >=3.2.1.2 && <3.3,
        wai-app-static >=3.1.6.2 && <3.2,
        wai-extra >=3.0.24.3 && <3.1,
        warp >=3.2.25 && <3.4,
        websockets >=0.12.5.2 && <0.13

    if os(windows)
        extra-libraries:
            kernel32
        build-depends:
            Win32 >=2.2.0.0 && <2.7
    else
        build-depends:
            unix >=2.3.1.0 && <2.8

    if flag(yi)
        cpp-options: -DLEKSAH_WITH_YI
        build-depends:
            yi >=0.12.4 && <0.13,
            yi-language >=0.2.0 && <0.3,
            yi-rope >=0.7.0.1 && <0.8

    if (flag(loc) && os(linux))
        cpp-options: -DLOCALIZATION
        build-depends:
            hgettext -any,
            setlocale -any

    if flag(network-uri)
        build-depends:
            network-uri >=2.6 && <2.7,
            network >=2.6 && <3.2
    else
        build-depends:
            network >=2.2 && <2.6

    if !impl(ghcjs -any)
        build-depends:
            ghc >=6.10.1 && <8.7,
            haskell-src-exts >=1.13.5 && <1.22,
            leksah-server >=0.17.0.0 && <0.18

    if flag(hare)
        build-depends:
            HaRe >=0.8.4.1 && <0.9,
            ghc-mod-core >=5.9.0.0 && <5.10,
            monad-control >=1.0.2.3 && <1.1

executable leksah
    main-is: Main.hs
    hs-source-dirs: main
    default-language: Haskell2010
    ghc-options: -rtsopts -fwarn-missing-fields
                 -fwarn-incomplete-patterns -ferror-spans
    build-depends:
        leksah -any,
        base >=4.0.0.0 && <4.13,
        gi-gtk-hs >=0.3.1.0 && <0.4,
        stm >=2.4.4 && <2.6

    if os(windows)
        extra-libraries:
            kernel32
        build-depends:
            Win32 >=2.2.0.0 && <2.7

    if flag(yi)
        cpp-options: -DLEKSAH_WITH_YI

    if (flag(yi) && flag(dyre))
        cpp-options: -DLEKSAH_WITH_DYRE

    if flag(threaded)
        ghc-options: -threaded

    if (os(linux) && flag(loc))
        cpp-options: -DLOCALIZATION
        build-depends:
            hgettext -any,
            setlocale -any

    if os(osx)
        ghc-options: -dynamic -optl-headerpad_max_install_names

    if !impl(ghcjs -any)
        build-depends:
            leksah-server -any

executable leksah-warp
    main-is: Warp.hs
    hs-source-dirs: main
    default-language: Haskell2010
    ghc-options: -rtsopts -fwarn-missing-fields
                 -fwarn-incomplete-patterns -ferror-spans
    build-depends:
        leksah-nogtk -any,
        base >=4.0.0.0 && <4.13

    if os(windows)
        extra-libraries:
            kernel32
        build-depends:
            Win32 >=2.2.0.0 && <2.7

    if flag(threaded)
        ghc-options: -threaded

    if (os(linux) && flag(loc))
        cpp-options: -DLOCALIZATION
        build-depends:
            hgettext -any,
            setlocale -any

    if os(osx)
        ghc-options: -dynamic -optl-headerpad_max_install_names

    if !impl(ghcjs -any)
        build-depends:
            leksah-server -any

executable leksah-wkwebview
    main-is: WKWebView.hs
    hs-source-dirs: main
    default-language: Haskell2010
    ghc-options: -threaded -rtsopts -Wall -ferror-spans
                 -dynamic -optl-headerpad_max_install_names

    if os(osx)
      build-depends:
        base >=4.0.0.0 && <4.13,
        data-default >=0.7.1.1 && <0.8,
        leksah-nogtk -any,
        jsaddle-wkwebview >=0.9.4.0 && <0.10

    if (!os(osx))
        buildable: False

--test-suite tests
--
--    if flag(yi)
--        build-depends:
--            yi -any
--    type: exitcode-stdio-1.0
--    main-is: Tests.hs
--    build-depends:
--        base >=4.0.0.0 && <4.11,
--        Cabal >=2.0.0 && <2.3,
--        QuickCheck >=2.4.2 && <2.11,
--        leksah,
--        containers -any,
--        ltk -any,
--        leksah-server -any,
--        hslogger -any,
--        transformers -any,
--        monad-loops -any,
--        text -any,
--        gi-glib >=2.0.2 && <2.1,
--        gi-gtk >=3.0.2 && <3.1,
--        gi-gtksource >=3.0.2 && <3.1,
--        gi-gtk-hs >=0.3.0.0 && <0.4,
--        stm >=2.4.4 && <2.6
--    default-language: Haskell2010
--    hs-source-dirs: tests
--    other-modules:
--        IDE.TextEditor.Tests
--    ghc-options: -threaded
