name: leksah-welcome
version: 0.15.0.0
cabal-version: 1.12
build-type: Simple
license: MIT
license-file: LICENSE
description:
    Example package you can use to try out some of Leksah's features

executable leksah-welcome
    main-is: Main.hs
    build-depends:
        QuickCheck -any,
        base -any
    default-language: Haskell2010
    hs-source-dirs: src

test-suite test-leksah-welcome
    type: exitcode-stdio-1.0
    main-is: Main.hs
    build-depends:
        QuickCheck -any,
        base -any,
        doctest -any
    default-language: Haskell2010
    hs-source-dirs: test
